<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_behaviour_hardware_title">

        <ee.oyatl.ime.fusion.preference.KeyStrokePreference
            app:key="hardware_language_key"
            app:title="@string/settings_behaviour_hardware_language_key_title"
            app:summary="@string/settings_behaviour_hardware_language_key_summary" />

        <SwitchPreferenceCompat
            app:key="always_show_soft_keyboard"
            app:defaultValue="false"
            app:title="@string/settings_behaviour_always_show_soft_keyboard_title"
            app:summary="@string/settings_behaviour_always_show_soft_keyboard_summary" />

    </PreferenceCategory>

</PreferenceScreen>