<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="layout"
        android:entries="@array/settings_input_mode_mozc_layout_entries"
        android:entryValues="@array/settings_input_mode_mozc_layout_values"
        android:title="@string/settings_input_mode_layout_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="flick_mode"
        android:entries="@array/settings_input_mode_mozc_flick_mode_entries"
        android:entryValues="@array/settings_input_mode_mozc_flick_mode_values"
        android:title="@string/settings_input_mode_mozc_flick_mode_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:key="flick_hint"
        android:title="@string/settings_input_mode_mozc_flick_hint_title"
        android:summary="@string/settings_input_mode_mozc_flick_hint_summary" />

    <ListPreference
        android:key="syllables_key_layout"
        android:entries="@array/settings_input_mode_mozc_syllables_key_layout_entries"
        android:entryValues="@array/settings_input_mode_mozc_syllables_key_layout_values"
        android:title="@string/settings_input_mode_syllables_key_layout_title"
        android:summary="@string/settings_input_mode_syllables_key_layout_summary" />

</androidx.preference.PreferenceScreen>