<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="ee.oyatl.ime.fusion.SettingsActivity$MethodFragment"
        app:icon="@drawable/checklist_24"
        app:key="method_header"
        app:title="@string/settings_method_header" />

    <Preference
        app:fragment="ee.oyatl.ime.fusion.SettingsActivity$AppearanceFragment"
        app:icon="@drawable/format_paint_24"
        app:key="appearance_header"
        app:title="@string/settings_appearance_header" />

    <Preference
        app:fragment="ee.oyatl.ime.fusion.SettingsActivity$BehaviourFragment"
        app:icon="@drawable/psychology_24"
        app:key="behaviour_header"
        app:title="@string/settings_behaviour_header" />

    <Preference
        app:fragment="ee.oyatl.ime.fusion.SettingsActivity$InputModeFragment"
        app:icon="@drawable/keyboard_24"
        app:key="mode_header"
        app:title="@string/settings_input_mode_header" />

</PreferenceScreen>